# AssemblyStats

./: .gitignore  README.md  gather_conan.py  gather_conda.py  main.py  pyproject.toml  requirements.in  requirements.txt  specs.py  specs_aarch64.py  specs_amd64.py  specs_x86.py  topic_modeling.ipynb  topic_modeling.py
uops/: README.md  airmont.csv  alderlake.csv  alderlakep.csv  broadwell.csv  cannonlake.csv  cascadelake.csv  coffeelake.csv  goldmont.csv  goldmontplus.csv  haswell.csv  icelake.csv  kabylake.csv  rocketlake.csv  skylake.csv  skylakex.csv  tigerlake.csv  tremont.csv  zen.csv  zen2.csv  zen3.csv  zen4.csv
